{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 39,
  "lineage": "a17e21c6-5308-dc0a-7145-f587151f0b64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0848ef99f8d44bb8c",
            "arn": "arn:aws:ec2:us-east-1:767397669345:elastic-ip/eipalloc-0848ef99f8d44bb8c",
            "association_id": "eipassoc-08257395a241bbc79",
            "domain": "vpc",
            "id": "eipalloc-0848ef99f8d44bb8c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f342ee322904ee22",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-54-204-221-61.compute-1.amazonaws.com",
            "public_ip": "54.204.221.61",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:767397669345:instance/i-0e3ff279e58b23d31",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-0e3ff279e58b23d31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "abi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-074e0ac27fd3aa5c0"
              }
            ],
            "primary_network_interface_id": "eni-074e0ac27fd3aa5c0",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-54-242-15-223.compute-1.amazonaws.com",
            "public_ip": "54.242.15.223",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017ce944a771049f2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e013e27382e65ff8",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0115af64230663cbb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_instance_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.main_sg",
            "aws_subnet.public1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:767397669345:instance/i-0e1f0f51ea77c005a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-0e1f0f51ea77c005a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "abi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01748194b1455d1ac"
              }
            ],
            "primary_network_interface_id": "eni-01748194b1455d1ac",
            "private_dns": "ip-10-0-3-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.110",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025bf5851c51c2e63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb25fbe4efa117e9",
            "tags": {
              "Name": "private-instance-1"
            },
            "tags_all": {
              "Name": "private-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0115af64230663cbb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_instance_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.main_sg",
            "aws_subnet.private1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:767397669345:instance/i-0599de252bb63ba1a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-s3-instance-profile",
            "id": "i-0599de252bb63ba1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "abi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e5e13e7fd2e3b19a"
              }
            ],
            "primary_network_interface_id": "eni-0e5e13e7fd2e3b19a",
            "private_dns": "ip-10-0-4-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.81",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-071a79a7d6582d5bb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e71d1a6f951fed28",
            "tags": {
              "Name": "private-instance-2"
            },
            "tags_all": {
              "Name": "private-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0115af64230663cbb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_instance_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.main_sg",
            "aws_subnet.private2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:internet-gateway/igw-034ce752f6edcc4ee",
            "id": "igw-034ce752f6edcc4ee",
            "owner_id": "767397669345",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-igw"
            },
            "tags_all": {
              "Name": "youtube-igw"
            },
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "flask_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/flask-alb/09604e83d4e4aae1",
            "arn_suffix": "app/flask-alb/09604e83d4e4aae1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-alb-817303167.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/flask-alb/09604e83d4e4aae1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0115af64230663cbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0accc400f80cf17e0"
              },
              {
                "subnet_id": "subnet-0e013e27382e65ff8"
              }
            ],
            "subnets": [
              "subnet-0accc400f80cf17e0",
              "subnet-0e013e27382e65ff8"
            ],
            "tags": {
              "Name": "flask-alb"
            },
            "tags_all": {
              "Name": "flask-alb"
            },
            "vpc_id": "vpc-057f88e5b9549145f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/flask-alb/09604e83d4e4aae1"
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/nginx-alb/69f0e53e03b548c2",
            "arn_suffix": "app/nginx-alb/69f0e53e03b548c2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-alb-1941354963.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/nginx-alb/69f0e53e03b548c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0115af64230663cbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0accc400f80cf17e0"
              },
              {
                "subnet_id": "subnet-0e013e27382e65ff8"
              }
            ],
            "subnets": [
              "subnet-0accc400f80cf17e0",
              "subnet-0e013e27382e65ff8"
            ],
            "tags": {
              "Name": "nginx-alb"
            },
            "tags_all": {
              "Name": "nginx-alb"
            },
            "vpc_id": "vpc-057f88e5b9549145f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/nginx-alb/69f0e53e03b548c2"
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "flask_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/flask-alb/09604e83d4e4aae1/8d90449c702a67ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/flask-tg/6b0a940e53991fd5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/flask-alb/09604e83d4e4aae1/8d90449c702a67ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/flask-alb/09604e83d4e4aae1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/flask-alb/09604e83d4e4aae1/8d90449c702a67ba"
          },
          "dependencies": [
            "aws_lb.flask_alb",
            "aws_lb_target_group.flask_tg",
            "aws_security_group.main_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/nginx-alb/69f0e53e03b548c2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113"
          },
          "dependencies": [
            "aws_lb.nginx_alb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.main_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "nginx_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener-rule/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113/9e38a2c834d7e2fb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/nginx*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener-rule/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113/9e38a2c834d7e2fb",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113",
            "priority": 100,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:listener-rule/app/nginx-alb/69f0e53e03b548c2/3f9282676589a113/9e38a2c834d7e2fb"
          },
          "dependencies": [
            "aws_lb.nginx_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.main_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "flask_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/flask-tg/6b0a940e53991fd5",
            "arn_suffix": "targetgroup/flask-tg/6b0a940e53991fd5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/flask-tg/6b0a940e53991fd5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/flask-alb/09604e83d4e4aae1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/flask-tg/6b0a940e53991fd5"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2",
            "arn_suffix": "targetgroup/nginx-tg/021ec404cd3c3db2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:767397669345:loadbalancer/app/nginx-alb/69f0e53e03b548c2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "flask_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/flask-tg/6b0a940e53991fd5-20250904052026604700000007",
            "port": 5000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/flask-tg/6b0a940e53991fd5",
            "target_id": "i-0599de252bb63ba1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_instance_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_instance.private_instance_2",
            "aws_lb_target_group.flask_tg",
            "aws_security_group.main_sg",
            "aws_subnet.private2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2-20250904052020130100000006",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397669345:targetgroup/nginx-tg/021ec404cd3c3db2",
            "target_id": "i-0e1f0f51ea77c005a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_instance_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_instance.private_instance_1",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.main_sg",
            "aws_subnet.private1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0848ef99f8d44bb8c",
            "association_id": "eipassoc-08257395a241bbc79",
            "connectivity_type": "public",
            "id": "nat-01b815bc2981298d6",
            "network_interface_id": "eni-0f342ee322904ee22",
            "private_ip": "10.0.1.57",
            "public_ip": "54.204.221.61",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e013e27382e65ff8",
            "tags": {
              "Name": "youtube-nat"
            },
            "tags_all": {
              "Name": "youtube-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:route-table/rtb-05e03c9887097639e",
            "id": "rtb-05e03c9887097639e",
            "owner_id": "767397669345",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b815bc2981298d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "youtube-private-rt"
            },
            "tags_all": {
              "Name": "youtube-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "rtb-05e03c9887097639e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:route-table/rtb-00adc31e48140f8a6",
            "id": "rtb-00adc31e48140f8a6",
            "owner_id": "767397669345",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034ce752f6edcc4ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "youtube-public-rt"
            },
            "tags_all": {
              "Name": "youtube-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "rtb-00adc31e48140f8a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb6a48b5f36d1ce",
            "region": "us-east-1",
            "route_table_id": "rtb-05e03c9887097639e",
            "subnet_id": "subnet-0cb25fbe4efa117e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0239787163e9a9cf9",
            "region": "us-east-1",
            "route_table_id": "rtb-05e03c9887097639e",
            "subnet_id": "subnet-0e71d1a6f951fed28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072e5f688ba980226",
            "region": "us-east-1",
            "route_table_id": "rtb-00adc31e48140f8a6",
            "subnet_id": "subnet-0e013e27382e65ff8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public1",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e03eee9ed0a1b61",
            "region": "us-east-1",
            "route_table_id": "rtb-00adc31e48140f8a6",
            "subnet_id": "subnet-0accc400f80cf17e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public2",
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:security-group/sg-0115af64230663cbb",
            "description": "Allow SSH, HTTP, HTTPS, Flask",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0115af64230663cbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask App",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-sg",
            "name_prefix": "",
            "owner_id": "767397669345",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "sg-0115af64230663cbb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:subnet/subnet-0cb25fbe4efa117e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb25fbe4efa117e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397669345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-private-1"
            },
            "tags_all": {
              "Name": "youtube-private-1"
            },
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "subnet-0cb25fbe4efa117e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:subnet/subnet-0e71d1a6f951fed28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e71d1a6f951fed28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397669345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-private-2"
            },
            "tags_all": {
              "Name": "youtube-private-2"
            },
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "subnet-0e71d1a6f951fed28",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:subnet/subnet-0e013e27382e65ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e013e27382e65ff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397669345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-public-1"
            },
            "tags_all": {
              "Name": "youtube-public-1"
            },
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "subnet-0e013e27382e65ff8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:subnet/subnet-0accc400f80cf17e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0accc400f80cf17e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397669345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-public-2"
            },
            "tags_all": {
              "Name": "youtube-public-2"
            },
            "vpc_id": "vpc-057f88e5b9549145f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397669345",
            "id": "subnet-0accc400f80cf17e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "youtube_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397669345:vpc/vpc-057f88e5b9549145f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064e1bed65c1c8ce3",
            "default_route_table_id": "rtb-04563aef2f1d856cf",
            "default_security_group_id": "sg-0b20e1251ccdcc736",
            "dhcp_options_id": "dopt-04061871f0178fa4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057f88e5b9549145f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04563aef2f1d856cf",
            "owner_id": "767397669345",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-vpc"
            },
            "tags_all": {
              "Name": "youtube-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}